# prefect-explorations

./: deployments.py  pyproject.toml  readme.md
flows/: api.py  dbt.py  dbt_project.yml
flows/models/dummyjson/staging/: stage_dummyjson__products.sql
ints/dbt/: deployments.py
ints/dbt/flows/: dbt.py
ints/dbt/flows/models/dummyjson/: __sources.yaml
ints/dummyjson_products/: deployments.py
ints/dummyjson_products/flows/: api.py
